--- a/AB Testing Analysis.ipynb
+++ b/AB Testing Analysis.ipynb
@@ -12,16 +12,24 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# For consistency\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "733cc701-030c-492a-b2f3-248eb081a3d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Consistency\n",
     "seed = 72\n",
     "np.random.seed(seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0d9025d3-c017-4768-b5f8-2a43b216f42c",
    "metadata": {},
    "outputs": [
@@ -83,7 +91,7 @@
        "4    4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "579493f5-e583-4676-9c95-1454cd864de7",
    "metadata": {},
    "outputs": [
@@ -171,7 +179,7 @@
        "4    4   8.373830  4.580326"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e54cda87-c476-41cd-a852-26df288b9630",
    "metadata": {},
    "outputs": [
@@ -282,13 +290,13 @@
        "max    8929.000000   13.291145    8.380286"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Getting a random sample from the population\n",
+    "#Random sample \n",
     "n_samples = 200\n",
     "samples_df = sim_df.sample(n_samples, random_state=seed)\n",
     "samples_df.describe()"
@@ -296,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f89082b0-4192-46ec-a387-a0415c895459",
    "metadata": {},
    "outputs": [
@@ -400,13 +408,13 @@
        "max    8929.000000   13.291145    8.380286    1.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Note this is a uniform distribution\n",
+    "#Uniform distribution\n",
     "is_control = np.random.choice([0,1], size=n_samples)\n",
     "samples_df = samples_df.assign(is_control=is_control)\n",
     "samples_df.describe()"
@@ -414,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "11896de9-8323-4c5c-a1e4-945e8e4808c5",
    "metadata": {},
    "outputs": [
@@ -424,7 +432,7 @@
        "<Axes: xlabel='var1', ylabel='Density'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5eca36ba-a7f7-44c5-b5f6-8176bd27fcc6",
    "metadata": {},
    "outputs": [
@@ -456,7 +464,7 @@
        "<Axes: xlabel='var2', ylabel='Density'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -478,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0e58fd0b-6dba-4a6a-bbaf-7a04b8640c8f",
    "metadata": {},
    "outputs": [
@@ -488,7 +496,7 @@
        "<Axes: xlabel='var1', ylabel='Density'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -510,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "77472514-1754-4c9e-bfc4-e6b8baa0711a",
    "metadata": {},
    "outputs": [],
@@ -520,13 +528,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7379f3f5-df48-4ec0-84c1-12e9c55dd84a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_significant(group1, group2, alpha=0.05):    \n",
-    "    # Is it significant? Welch's\n",
     "    t,p = stats.ttest_ind(group1,group2,equal_var=False)\n",
     "    return p<alpha, p"
    ]
@@ -539,10 +546,8 @@
    "outputs": [],
    "source": [
     "def experiment_vs_control(df, var_name, alpha=0.05):\n",
-    "    #\n",
     "    experiment = df[df.is_control == 0][var_name]\n",
     "    control = df[df.is_control == 1][var_name]\n",
-    "    # \n",
     "    return is_significant(experiment, control, alpha)"
    ]
   },
@@ -569,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1504f5d5-ef58-49cb-8b45-e51e20823702",
    "metadata": {},
    "outputs": [
@@ -579,7 +584,7 @@
        "(True, 2.84912539013435e-21)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
